--- a/3.5/Dockerfile
+++ b/3.5/Dockerfile
@@ -5,6 +5,6 @@ timeout = 60\n\
 index-url = http://mirrors.aliyun.com/pypi/simple\n\
 [install]\n\
 trusted-host = mirrors.aliyun.com' > /etc/pip.conf && \
-    pip install --no-cache-dir mysqlclient && \
+    pip install --no-cache-dir mysqlclient uWSGI && \
     apk del g++ mariadb-dev && \
     apk add --no-cache mariadb-client-libs
